Converted the <header> section into a reusable template style.
Swapped classes for id's in each element.
Defined the font family, font scale proportions and margins.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-    <header class="HierHeader">
-        <h1 class="HierHeader">RGB Picker Game</h1>
+    <header id="tempHeader">
+        <div id="tempPageTitle">RGB Picker Game</div>
         brought to you by
-        <h2 class="HierHeader">jordiCombs</h2>
-        <table class="HierHeader">
+        <div id="tempAuthor">jordiCombs</div>
+        <table id="tempLogoTable">
             <tr>
-                <td class="left"><hr class="flared"></td>
-                <td class="center"><img class="logoImg" src="http://res.cloudinary.com/hieratikos/image/upload/v1492361036/NightfallLogo_ndt9em.png"></td>
-                <td class="right"><hr class="flared"></td>
+                <td id="tempLogoTableLeft"><hr class="flared"></td>
+                <td id="tempLogoTableCenter"><img id="logoImg" src="http://res.cloudinary.com/hieratikos/image/upload/v1492361036/NightfallLogo_ndt9em.png"></td>
+                <td id="tempLogoTableRight"><hr class="flared"></td>
             </tr>
         </table>
     </header>
