--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>RGB Picker Game</title>
+    <link rel="icon" href="../images/camel-icon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script defer src="scripts.js"></script>
 </head>
